[package]
name = "dungeoncrawl"
version = "0.1.1"
description = "Following along with Herbert Wolverson's 'Hands-on Rust'"
authors = ["Duane Sibilly <duane@sibilly.com>"]
repository = "https://github.com/dsibilly/dungeoncrawl"
keywords = ["ecs", "game"]
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.7"
env_logger = "~0.9.1"
log = "~0.4.17"
legion = "~0.4.0"